--- a/web/style.css
+++ b/web/style.css
@@ -5,5 +5,23 @@ body {
 body div {
     flex-grow: 1;
     background-color: #fff;
-    box-shadow: 4 4 4 black;
+    margin: 5px;
+}
+body div:first-child {
+    margin-left: 0px;
+}
+#ordenes {
+    margin-right: 0px;
+}
+ul {
+    list-style: none;
+}
+#submit {
+    background-color: rgb(42, 180, 14);
+    color: #fff;
+    border: solid 0px;
+    border-radius: 24px;
+    margin: 15px;
+    margin-left: 35px;
+    padding: 7px 15px;
 }
